# Sanctifier

./: .dockerignore  .gitignore  .sanctify.toml  Cargo.toml  Dockerfile  README.md  SECURITY.md  final_message.md  package-lock.json
.github/workflows/: e2e-coverage.yml  publish.yml  rust.yml
contracts/amm-pool/: Cargo.toml  README.md
contracts/amm-pool/src/: lib.rs
contracts/amm-pool/tests/: proptest_amm.proptest-regressions  proptest_amm.rs
contracts/kani-poc/: Cargo.toml
contracts/kani-poc/src/: lib.rs
contracts/token-with-bugs/: Cargo.toml
contracts/token-with-bugs/src/: lib.rs
contracts/vulnerable-contract/: .sanctifier_cache  Cargo.toml
docs/: getting-started.md  kani-integration.md
docs/adr/: 001-record-architecture-decisions.md  002-use-rust-for-core-implementation.md  003-static-vs-runtime-analysis.md  004-plugin-system-design.md  005-wasm-parsing-infrastructure.md
frontend/: package-lock.json  package.json  pr-122-storybook.md
frontend/.storybook/: main.ts  preview.ts
frontend/app/: types.ts
frontend/app/components/: CallGraph.stories.tsx  CallGraph.tsx  CodeSnippet.stories.tsx  FindingsList.stories.tsx  SanctityScore.stories.tsx  SanctityScore.tsx  SeverityFilter.stories.tsx  SummaryChart.stories.tsx  ThemeToggle.stories.tsx
frontend/app/dashboard/: page.tsx
frontend/app/lib/: export-pdf.ts  transform.ts
tooling/sanctifier-cli/: Cargo.toml
tooling/sanctifier-cli/src/: branding.rs  cache.rs  main.rs
tooling/sanctifier-cli/tests/: cli_tests.rs
tooling/sanctifier-core/: Cargo.toml
tooling/sanctifier-core/src/: lib.rs  (+5 more)
(+13 files in other folders)
