[workspace]
members = [
    "tooling/sanctifier-cli",
    "tooling/sanctifier-core",
    "tooling/sanctifier-wasm",
    "contracts/vulnerable-contract",
    "contracts/kani-poc",
    "contracts/amm-pool",
]
resolver = "2"

[workspace.package]
rust-version = "1.78"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1



