[package]
name = "amm-pool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dev-dependencies]
proptest = "1.4"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
